# mcp_scholar

./: .gitignore  README.md  pyproject.toml  test_mcp_service.py  test_scholar.py
src/mcp_scholar/: __init__.py  __main__.py  scholar.py  server.py
src/mcp_scholar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_mcp_service.py  test_scholar.py
